# quantix

./: .gitignore  README.md  cspell.json  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
scripts/: create-nx-pylib.sh
