[tool.nx]
autoActivate = true

[tool.poetry]
name = "quantix"
version = "1.0.0"
description = "A suite of Python packages for algorithmic trading, offering tools for data analysis, strategy development, back-testing and live trading."
authors = ["Dynamic Quants"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
patito = "^0.7.0"
polars = "^1.8.2"
pydantic = "^2.9.2"
pytz = "^2024.2"

[tool.poetry.dependencies.core]
path = "packages/core"
develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"
mypy = "^1.11.2"

[tool.poetry.group.types.dependencies]
types-pytz = "^2024.2.0.20240913"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
