[tool.nx]
autoActivate = true

[tool.poetry]
name = "quantix"
version = "1.0.0"
description = "A suite of Python packages for algorithmic trading, offering tools for data analysis, strategy development, back-testing and live trading."
authors = ["Dynamic Quants"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
alpaca-py = "^0.30.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
colorama = "^0.4.6"
polars = "^1.9.0"
pandera = { extras = ["polars"], version = "^0.20.4" }
numpy = "^2.1.2"

[tool.poetry.dependencies.core]
path = "packages/core"
develop = true

[tool.poetry.dependencies.brokers]
path = "packages/brokers"
develop = true

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
